fix: add missing styles to Popup inner component center alignment

--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -17,3 +17,7 @@
 .popup--inner__center {
     left: 50%;
     top: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    padding: 1em 0;
+}
